:bug: fix horizontal scrolling
Closes #2

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -172,7 +172,7 @@ body {
 .content-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto calc(100% + -10rem);
+  grid-template-rows: auto auto 1fr;
   height: 100%;
   overflow: hidden;
   padding: 2.25rem 0 0;
